--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,24 @@ rad.json
 *.flf
 #Test results file
 TestResults.xml
+
+
+# Virtual environments
+ex00/
+ex01/
+ex02/
+*/venv/
+*/.venv/
+*/env/
+*/.env/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# Jupyter checkpoints
+.ipynb_checkpoints/
+
+# OS files
+.DS_Store
+Thumbs.db
